Finished my first ever website

--- a/index.html
+++ b/index.html
@@ -8,16 +8,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">Jhankar</span> Website</h1>
+        <h1><span class="orange-highlight">Jhankar</span> Website</h1>
         <h3>World-Class Professional web dev</h3>
         <p>Web developers work independently as freelancers or with company teams to create websites. Depending on the job, these professionals may focus on front-end development, which involves designing sites and producing content, or back-end development, which involves writing code to make website features work.</p>
+        <a class="link-button" target="_blank" href="https://www.programming-hero.com/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>Hard skills, or the specific knowledge and abilities needed for a job, vary by industry and position. Coding is one of the primary hard skills of a web developer, and these professionals must understand at least some of the programming languages described below.</p>
+            <a class="link-button" target="_blank" href="https://online.inpixio.com/tools/remove-background/edit/c40367a4-804c-45e3-9b71-682154bcbd24">Edit Your Image</a>
+
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro level Web Dev</h3>
+            <p>I used to think that you were either a web designer or a web developer. Or maybe you were one of those rare unicorns who did both. But either way, you either worked on the design of the site, or the code that made it work.</p>
+
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020 - 2021 | Programming Hero Learner</h3>
+            <p>To understand what each of the web developer specialties (or in the case of full stack web developers, non-specialties) are, we’ve created a guide breaking them all down, along with the skills you need to learn to become a full stack developer—if that’s your thing.</p>
+
+        </div>  
+    </section>
+    <footer>
+        <p>peter parker 2021, a programming Hero initiative</p>
+    </footer>
 </body>
 </html>
